Redesigned the site's color scheme from purple to blue, reduced the oversized profile photo and social icons, fixed the profile info layout, and switched    to a non-fixed footer with proper dark mode styling.

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -58,35 +58,47 @@ ul.task-list input[type="checkbox"] {
 .profile {
   width: 100%;
 
+  img {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+  }
+
   .more-info {
-    margin-bottom: 5px;
-    margin-top: 5px;
-    font-family: monospace;
+    margin-top: 0.75rem;
+    margin-bottom: 0.5rem;
+    font-size: 0.85rem;
+    color: var(--global-text-color-light);
+    text-align: center;
 
     p {
-      display: inline-block;
+      display: block;
       margin: 0;
+      line-height: 1.7;
     }
   }
 }
 
 .profile.float-right {
-  margin-left: 1rem;
+  margin-left: 1.5rem;
 }
 
 .profile.float-left {
-  margin-right: 1rem;
+  margin-right: 1.5rem;
 }
 
 @media (min-width: 576px) {
   .profile {
-    width: 30%;
+    width: 180px;
+    min-width: 180px;
+  }
+}
 
-    .address {
-      p {
-        display: block;
-      }
-    }
+@media (max-width: 575px) {
+  .profile {
+    max-width: 160px;
+    margin: 0 auto 1.5rem auto;
+    float: none !important;
   }
 }
 
@@ -175,23 +187,23 @@ ul.task-list input[type="checkbox"] {
   text-align: center;
 
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem;
 
     a {
       img {
-        width: 3.2rem;
-        height: 3.2rem;
-        margin-bottom: 1rem;
+        width: 1.8rem;
+        height: 1.8rem;
+        margin-bottom: 0.5rem;
       }
 
       svg {
-        width: 3.5rem;
-        height: 4rem;
+        width: 2rem;
+        height: 2rem;
         margin-bottom: 0.5rem;
 
         image {
-          width: 3.5rem;
-          height: 3.5rem;
+          width: 2rem;
+          height: 2rem;
         }
       }
 
