--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,12 +33,7 @@ body.sticky-bottom-footer {
   max-width: v.$max-content-width;
 }
 
-// Profile
-.profile {
-  img {
-    width: 100%;
-  }
-}
+// Profile styles consolidated in _components.scss
 
 // Content layout uses Bootstrap's grid system with responsive columns
 // Main content flows naturally through container-mt-5 and Bootstrap grid classes
