--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -33,8 +33,10 @@ $white-color: #ffffff !default;
 $black-color: #000000 !default;
 
 // Theme colors
+$theme-color: #2563eb !default;
+$theme-color-dark: #60a5fa !default;
 
-$code-bg-color-light: rgba($purple-color, 0.05);
+$code-bg-color-light: rgba($theme-color, 0.05);
 $code-bg-color-dark: #2c3237 !default;
 
 // Font awesome location
